tests/snapshots/file@base@variable@duplicate_local.lox.snap
---
source: tests/common/mod.rs
description: "{\n  var a = \"value\";\n  var a = \"other\"; // Error at 'a': Already a variable with this name in this scope.\n}\n"
input_file: crafting_interpreters_test_files/variable/duplicate_local.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × variable with name 'a' is already defined in this scope
   ╭─[3:7]
 2 │   var a = "value";
 3 │   var a = "other"; // Error at 'a': Already a variable with this name in this scope.
   ·       ┬
   ·       ╰── here
 4 │ }
   ╰────
