tests/snapshots/file@base@variable@early_bound.lox.snap
---
source: tests/common/mod.rs
description: "var a = \"outer\";\n{\n  fun foo() {\n    print a;\n  }\n\n  foo(); // expect: outer\n  var a = \"inner\";\n  foo(); // expect: outer\n}\n"
input_file: crafting_interpreters_test_files/variable/early_bound.lox
---
OUT: 
outer
outer

===
ERR:
