tests/snapshots/file@base@variable@shadow_local.lox.snap
---
source: tests/common/mod.rs
description: "{\n  var a = \"local\";\n  {\n    var a = \"shadow\";\n    print a; // expect: shadow\n  }\n  print a; // expect: local\n}\n"
input_file: crafting_interpreters_test_files/variable/shadow_local.lox
---
OUT: 
shadow
local

===
ERR:
